--- a/client/src/component/style.css
+++ b/client/src/component/style.css
@@ -1,9 +1,10 @@
 body {
-  padding: 0.4rem;
+  padding: 0.25rem;
+  background-color: rgb(244, 245, 246) !important;
 }
 
 * {
-  font-size: 10px;
+  font-size: 11px;
 }
 
 section{
@@ -15,7 +16,7 @@ section{
 section .form_data{
   max-width: 550px;
   margin: 25px auto;
-  padding: 35px 10px;
+  padding: 25px 10px;
   box-shadow: 0 0 15px -10px #2d3748;
   border-radius: 10px;
   display: flex;
@@ -30,7 +31,7 @@ section .form_data{
 }
 
 .form_data h1{
-  font-size: 34px;
+  font-size: 2.2rem;
   color: #2a4365;
 }
 
@@ -54,13 +55,13 @@ section .form_data{
   outline: none;
   margin-bottom: 14px;
   margin-top: 9px;
-  font-size: 14px;
-  
+  font-size: 1.1rem;
+  background-color: rgb(244, 245, 246);
 }
 
 .form_data form .form_input label{
   font-weight: 600;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
 }
 
 .form_input .two{
@@ -77,7 +78,7 @@ section .form_data{
 .form_data form .form_input input::placeholder{
   color: #8694a8;
   letter-spacing: .5px;
-  font-size: 14px;
+  font-size: 1.1rem;
 }
 
 .form_input .showpass{
@@ -87,7 +88,7 @@ section .form_data{
   padding: 7px 10px;
   margin-right: 5px;
   margin-top: 12px;
-  font-size: 14px;
+  font-size: 1rem;
   font-weight: 600;
   color: #2a4365;
   background-color: #EDF2F7;
@@ -144,49 +145,24 @@ header nav{
   align-items: center;
 }
 
-header nav h1{
-  color:#2d3748;
-}
 
 table {
-  margin-top: 2.5rem;
-  box-shadow: 5px 5px 9px rgb(142, 140, 140);
+  margin-top: 1.5rem;
+  /* box-shadow: 5px 5px 9px rgb(142, 140, 140); */
+}
+
+table tr {
+  cursor: pointer;
 }
 
 th, td {
-  font-size: 1.7rem;
-}
-
-
-.logout-btn {
-  color: #EDF2F7;
-  background-color: rgb(223, 13, 13);
-  border: none;
-  font-size: 17px;
-  padding: 5px 12px;
-  border-radius: 5px;
-}
-
-.logout-btn:hover {
-  color: rgb(223, 13, 13);
-  background-color: #EDF2F7;
-  border: 1px solid rgb(223, 13, 13);
+  font-size: 1.4rem;
 }
 
 .dash-btn {
-  color: #000000;
-  background-color: rgb(187, 241, 241);
-  border: none;
-  font-size: 17px;
-  padding: 5px 12px;
-  border-radius: 5px;
-  margin: 0 10px;
-}
-
-.dash-btn:hover {
-  color: #000;
-  background-color: rgb(122, 235, 235);
-  border: 1px solid #000;
+  padding: 5px 19px;
+  margin: 5px 9px;
+  font-size: 1.2rem !important;
 }
 
 .link {
@@ -195,26 +171,23 @@ th, td {
 }
 
 @media screen and (max-width: 480px) {
-  header nav h1 {
-    font-size: 3rem;
-  }
   header {
     width: 100%;
     height: auto;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.35rem;
   }
 
   header nav {
     flex-direction: column;
-    gap: 0.7rem;
+    gap: 0.5rem;
   }
 
   .form_data .form_heading h1 {
-    font-size: 2.9rem;
-    margin: 0.8rem 0;
+    font-size: 2rem;
+    margin: 0.6rem 0;
   }
 
   th, td {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
